refact: adding the right dockers

--- a/conf/docker.config
+++ b/conf/docker.config
@@ -1,27 +1,22 @@
-docker {
-  enabled = true
-  runOptions = "${params.geniac.containers?.dockerRunOptions}"
-}
-
 process {
-  withLabel:bowtie2{ container = "bowtie2" }
-  withLabel:bwa{ container = "bwa" }
-  withLabel:compbam{ container = "compbam" }
-  withLabel:deeptools{ container = "deeptools" }
-  withLabel:epic2{ container = "epic2" }
-  withLabel:fastqc{ container = "fastqc" }
-  withLabel:featureCounts{ container = "featurecounts" }
-  withLabel:homer{ container = "homer" }
-  withLabel:idr{ container = "idr" }
-  withLabel:macs2{ container = "macs2" }
-  withLabel:multiqc{ container = "multiqc" }
+  withLabel:bedtools{ container = "quay.io/biocontainers/bedtools" }
+  withLabel:bowtie2{ container = "quay.io/biocontainers/bowtie2" }
+  withLabel:bwa{ container = "nciccbr/ccbr_ubuntu_base_20.04:v5" }
+  withLabel:compbam{ container = "nciccbr/ccbr_ubuntu_base_20.04:v5" }
+  withLabel:deeptools{ container = "nciccbr/ccbr_deeptools_3.5.3:v1" }
+  withLabel:epic2{ container = "quay.io/umichbfxcore/epic2" }
+  withLabel:fastqc{ container = "nciccbr/ccrgb_qctools:v4.0" }
+  withLabel:featureCounts{ container = "pegi3s/feature-counts" }
+  withLabel:homer{ container = "nciccbr/ccbr_homer_4.11:v1" }
+  withLabel:idr{ container = "nciccbr/ccbr_idr_2.0.4.2:v032219" }
+  withLabel:macs2{ container = "nciccbr/ccbr_macs2_2.2.9.1:v1" }
+  withLabel:multiqc{ container = "nciccbr/ccbr_multiqc_1.15:v1" }
   withLabel:onlyLinux{ container = "onlylinux" }
-  withLabel:picard{ container = "picard" }
-  withLabel:ppqt{ container = "ppqt" }
-  withLabel:preseq{ container = "preseq" }
-  withLabel:python{ container = "python" }
-  withLabel:r{ container = "r" }
-  withLabel:samtools{ container = "samtools" }
-  withLabel:star{ container = "star" }
-  withLabel:unix{ container = "unix" }
+  withLabel:picard{ container = "nciccbr/ccbr_picard_2.27.5:v1" }
+  withLabel:ppqt{ container = "quay.io/biocontainers/phantompeakqualtools:1.2.2--hdfd78af_1" }
+  withLabel:preseq{ container = "nciccbr/ccbr_preseq_v2.0:v1" }
+  withLabel:python{ container = "nciccbr/ccbr_ubuntu_base_20.04:v6.1" }
+  withLabel:r{ container = "nciccbr/ccbr_r_4.3.0:v1" }
+  withLabel:samtools{ container = "nciccbr/ccbr_ubuntu_base_20.04:v6" }
+  withLabel:star{ container = "nciccbr/ccbr_star_plus:v2" }
 }
