refact: adding new genome resources available on biowulf

--- a/conf/genomes.config
+++ b/conf/genomes.config
@@ -35,15 +35,16 @@ params {
      }
 
     'hg38' {
-      fasta         = "${params.genomeAnnotationPath}/Human/hg38/genome/hg38.fa"
-      chrsize       = "${params.genomeAnnotationPath}/Human/hg38/genome/chrom_hg38.sizes" 
-      bwaIndex      = "${params.genomeAnnotationPath}/Human/hg38/indexes/bwa/"
-      bowtie2Index  = "${params.genomeAnnotationPath}/Human/hg38/indexes/bowtie2/"
-      starIndex     = "${params.genomeAnnotationPath}/Human/hg38/indexes/STAR_2.7.6a/"
-      geneBed       = "${params.genomeAnnotationPath}/Human/hg38/gtf/gencode.v34.annotation_proteinCoding_gene.bed"
-      gtf           = "${params.genomeAnnotationPath}/Human/hg38/gtf/gencode.v34.annotation.gtf"
+      fasta         = "${params.genomeAnnotationPath}/hg38_basic/hg38.fa"
+      chrsize       = "${params.genomeAnnotationPath}/hg38_basic/indexes/hg38.fa.sizes" 
+      bwaIndex      = "${params.genomeAnnotationPath}/hg38_basic/bwa_index/*"
+      bowtie2Index  = "${params.genomeAnnotationPath}/hg38_basic/*"
+      starIndex     = "${params.genomeAnnotationPath}/hg38_basic/*"
+      geneBed       = "${params.genomeAnnotationPath}/hg38_basic/genes.bed"
+      gtf           = "${params.genomeAnnotationPath}/hg38_basic/genes.gtf"
       effGenomeSize = "2913022398"
-      blacklist     = "${params.genomeAnnotationPath}/Human/hg38/ENCODE/ENCFF356LFX_merged.bed"
+      blacklist     = "/data/CMBS_POB_JEE/analysis/chip/blacklist/blacklist.bed"
+      // blacklist     = "${params.genomeAnnotationPath}/hg38_basic/indexes/blacklist.bed"
     }
 
     'hg38_base' {
@@ -56,6 +57,17 @@ params {
       gtf           = "${params.genomeAnnotationPath}/Human/hg38_base/gtf/gencode.v34.annotation.gtf"
       effGenomeSize = "2937655681"
       blacklist     = "${params.genomeAnnotationPath}/Human/hg38_base/ENCODE/ENCFF356LFX_merged.bed"
+    }
+   'hs1' {
+      fasta         = "${params.genomeAnnotationPath}/hs1/hs1.fa"
+      chrsize       = "${params.genomeAnnotationPath}/hs1/sizes.genome"
+      bwaIndex      = "${params.genomeAnnotationPath}/hs1/indexes/bwa/*"
+      bowtie2Index  = "${params.genomeAnnotationPath}/hs1/indexes/*"
+      starIndex     = "${params.genomeAnnotationPath}/hs1/indexes"
+      geneBed       = ""
+      gtf           = ""
+      effGenomeSize = "3054832041"
+      blacklist     = "/data/CCBR_Pipeliner/Pipelines/CARLISLE/v2.5.0/resources/blacklistbed/hs1.bed"
     }
 
    't2tchm13' {
@@ -97,12 +109,23 @@ params {
     'mm9' {
       fasta         = "${params.genomeAnnotationPath}/Mouse/mm9/genome/mm9.fa"
       chrsize       = "${params.genomeAnnotationPath}/Mouse/mm9/genome/chrom_mm9.sizes" 
-      bwaIndex      = "${params.genomeAnnotationPath}/Mouse/mm9/indexes/bwa/"
-      bowtie2Index  = "${params.genomeAnnotationPath}/Mouse/mm9/indexes/bowtie2/"
+      bwaIndex      = "${params.genomeAnnotationPath}/Mouse/mm9/indexes/bwa/*"
+      bowtie2Index  = "${params.genomeAnnotationPath}/Mouse/mm9/indexes/bowtie2/*"
       starIndex     = "${params.genomeAnnotationPath}/Mouse/mm9/indexes/STAR_2.7.6a/"
       geneBed       = "${params.genomeAnnotationPath}/Mouse/mm9/gtf/gencode.vM1.annotation_proteinCoding_gene.bed"
       gtf           = "${params.genomeAnnotationPath}/Mouse/mm9/gtf/gencode.vM1.annotation.gtf"
       effGenomeSize = "2620345972"
+    }
+
+   'dmelr6.32' {
+      fasta         = "${params.genomeAnnotationPath}/dmelr6.32/Drosophila_melanogaster.BDGP6.32.dna.toplevel.fa"
+      chrsize       = "${params.genomeAnnotationPath}/dmelr6.32/chrom_dmelr6.28.sizes"
+      bwaIndex      = "${params.genomeAnnotationPath}/dmelr6.32/indexes/bwa/*"
+      bowtie2Index  = "${params.genomeAnnotationPath}/dmelr6.32/indexes/bowtie2/*"
+      starIndex     = "${params.genomeAnnotationPath}/dmelr6.32/indexes/STAR_2.7.6a/"
+      geneBed       = "${params.genomeAnnotationPath}/dmelr6.32/gtf/Drosophila_melanogaster.BDGP6.32.109.gene.bed"
+      gtf           = "${params.genomeAnnotationPath}/dmelr6.32/gtf/Drosophila_melanogaster.BDGP6.32.109.gtf"
+      effGenomeSize = "142573024"
     }
 
     'dmelr6.21' {
@@ -137,7 +160,6 @@ params {
       gtf           = "${params.genomeAnnotationPath}/Drosophila_melanogaster/dmelr6.28/gtf/Drosophila_melanogaster.BDGP6.28.101.gtf"
       effGenomeSize = "142573024"
     }
-
 
     'danRer10' {
       fasta         = "${params.genomeAnnotationPath}/Zebrafish/danRer10/genome/danRer10.fa"
