--- a/nextflow.config
+++ b/nextflow.config
@@ -138,6 +138,12 @@ profiles {
   test {
     includeConfig 'conf/test.config'
   }
+  biowulf {
+    includeConfig 'conf/biowulf.config'
+  }
+  slurm {
+    includeConfig 'conf/slurm.config'
+  }
 }
 
 // Load annotation
