refact: updates to slurm.config

--- a/conf/slurm.config
+++ b/conf/slurm.config
@@ -11,15 +11,5 @@ executor {
     }
 }
 
-process {
-    executor = 'slurm'
-    maxRetries = 1
-
-    clusterOptions = ' --gres=lscratch:200 '
-
-    stageInMode = 'symlink'
-    stageOutMode = 'rsync'
-
-    // for running pipeline on group sharing data directory, this can avoid inconsistent files timestamps
-    cache = 'lenient'
-}
+process.executor = 'slurm'
+process.maxRetries = 1
