chore(ci): address codeql alerts
explicitly set permissions for gha workflows

--- a/.github/workflows/user-projects.yml
+++ b/.github/workflows/user-projects.yml
@@ -1,4 +1,4 @@
-name: Add to personal projects
+name: personal-projects
 
 on:
   issues:
@@ -7,6 +7,11 @@ on:
   pull_request:
     types:
       - assigned
+
+permissions:
+  issues: write
+  pull-requests: write
+  contents: read
 
 jobs:
   add-to-project:
